<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_xscore"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="@dimen/shop_item_image_height_25"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:background="@color/defaultBackgroundColor"
        android:contentDescription="@string/score_image_content_description"
        app:layout_constraintEnd_toEndOf="@+id/tv_xscore_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_xscore_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_xscore_title"
        app:srcCompat="@drawable/icon_xscore" />

    <TextView
        android:id="@+id/tv_xscore"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center"
        android:textColor="@color/shopItemUpgradeTextColor"
        android:textSize="@dimen/font_default_18"
        app:layout_constraintEnd_toEndOf="@+id/iv_xscore"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_xscore"
        app:layout_constraintTop_toBottomOf="@+id/iv_xscore"
        tools:text="LEVEL" />

    <ImageView
        android:id="@+id/iv_bullet"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="@dimen/shop_item_image_height_25"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:background="@color/defaultBackgroundColor"
        android:contentDescription="@string/bullet_image_content_description"
        app:layout_constraintEnd_toEndOf="@+id/tv_bullet_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_bullet_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_bullet_title"
        app:srcCompat="@drawable/icon_bullet" />

    <TextView
        android:id="@+id/tv_bullet"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center"
        android:textColor="@color/shopItemUpgradeTextColor"
        android:textSize="@dimen/font_default_18"
        app:layout_constraintEnd_toEndOf="@+id/iv_bullet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_bullet"
        app:layout_constraintTop_toBottomOf="@+id/iv_bullet"
        tools:text="LEVEL" />

    <TextView
        android:id="@+id/tv_health"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center"
        android:textColor="@color/shopItemUpgradeTextColor"
        android:textSize="@dimen/font_default_18"
        app:layout_constraintEnd_toEndOf="@+id/iv_health"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_health"
        app:layout_constraintTop_toBottomOf="@+id/iv_health"
        tools:text="LEVEL" />

    <ImageView
        android:id="@+id/iv_ship"
        android:layout_width="@dimen/shop_item_ship_width_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_16"
        android:contentDescription="@string/ship_image_content_description"
        app:layout_constraintBottom_toTopOf="@+id/tv_bullet_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/spaceship_1_game" />

    <TextView
        android:id="@+id/tv_health_title"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_very_huge_200"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center"
        android:text="@string/shop_item_max_health"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_default_18"
        app:layout_constraintStart_toStartOf="@+id/iv_ship"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bullet_title"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium_16"
        android:layout_marginLeft="@dimen/spacing_medium_16"
        android:layout_marginEnd="@dimen/spacing_medium_16"
        android:layout_marginRight="@dimen/spacing_medium_16"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center"
        android:text="@string/shop_item_bullet_damage"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_default_18"
        app:layout_constraintEnd_toStartOf="@+id/tv_xscore_title"
        app:layout_constraintStart_toEndOf="@+id/tv_health_title"
        app:layout_constraintTop_toTopOf="@+id/tv_health_title" />

    <Button
        android:id="@+id/btn_price_bullet"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small_8"
        android:layout_marginLeft="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        app:layout_constraintEnd_toEndOf="@+id/tv_bullet_title"
        app:layout_constraintStart_toStartOf="@+id/tv_bullet_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_bullet"
        tools:text="Button" />

    <TextView
        android:id="@+id/tv_xscore_title"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:background="@color/defaultBackgroundColor"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center_vertical|center"
        android:text="@string/shop_item_score_multiplier"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_default_18"
        app:layout_constraintEnd_toEndOf="@+id/iv_ship"
        app:layout_constraintTop_toTopOf="@+id/tv_bullet_title" />

    <Button
        android:id="@+id/btn_price_xscore"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        app:layout_constraintEnd_toEndOf="@+id/tv_xscore_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_xscore_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_xscore"
        tools:text="Button" />

    <Button
        android:id="@+id/btn_price_health"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        app:layout_constraintEnd_toEndOf="@+id/tv_health"
        app:layout_constraintStart_toStartOf="@+id/tv_health"
        app:layout_constraintTop_toBottomOf="@+id/tv_health"
        tools:text="Button" />

    <Button
        android:id="@+id/btn_ship_price"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small_8"
        android:layout_marginLeft="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_medium_16"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:background="@drawable/button_shadow"
        android:fontFamily="@font/iceberg_regular"
        android:textColor="@color/colorMenuText"
        app:layout_constraintEnd_toEndOf="@+id/iv_ship"
        app:layout_constraintStart_toStartOf="@+id/iv_ship"
        app:layout_constraintTop_toBottomOf="@+id/btn_price_bullet"
        tools:text="300$" />

    <ImageView
        android:id="@+id/iv_health"
        android:layout_width="@dimen/shop_item_upgrade_width_80"
        android:layout_height="@dimen/shop_item_image_height_25"
        android:background="@color/defaultBackgroundColor"
        android:contentDescription="@string/health_image_content_description"
        app:layout_constraintEnd_toEndOf="@+id/tv_health_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_health_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_health_title"
        app:srcCompat="@drawable/icon_health" />

</android.support.constraint.ConstraintLayout>