<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/menu_background">

    <ImageView
        android:id="@+id/iv_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium_16"
        android:contentDescription="@string/back_btn_content_description"
        android:src="@drawable/arrow_left_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_medium_16"
        android:layout_marginRight="@dimen/spacing_medium_16"
        android:drawableStart="@drawable/icon_money"
        android:drawableLeft="@drawable/icon_money"
        android:drawablePadding="@dimen/spacing_small_8"
        android:gravity="center_vertical"
        android:textColor="@color/colorMenuText"
        android:textSize="@dimen/font_fragment_money_25"
        android:textStyle="bold"
        app:fontFamily="@font/iceberg_regular"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back_btn"
        tools:text="25" />

    <TextView
        android:id="@+id/tv_shop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_fragment_title_80"
        android:text="@string/fragment_shop_title"
        android:textColor="@color/colorMenuText"
        android:textSize="@dimen/font_fragment_title_32"
        app:fontFamily="@font/iceberg_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_ship_pager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_medium_16"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shop_title" />

</android.support.constraint.ConstraintLayout>