<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/menu_background">

    <ImageView
        android:id="@+id/iv_game_logo"
...
